Mon 28 Aug 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Reorganize make targets (check make help for the descriptions)
	* Move settings module into carrell

Wed 25 Jul 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Change repository name

Mon 25 Feb 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add toolbar (right secondary sidebar)
	* Update article form
	* Add unit tests for new/edit article

Mon 12 Feb 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add carrell reader view

Tue 06 Feb 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add carrell resource (subdomain)

Mon 05 Feb 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add search functionality for registry

Fri 26 Jan 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Update styr to v0.0.26

Thu 25 Jan 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add reserved word validation for Project.namespace

Wed 24 Jan 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add registry subdomain

Thu 14 Nov 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Update env var names for bucket static url (cdn)
	* Update urls for script, widget and api (scrolliris.com)

Sun 12 Nov 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Update font config (remove typekit, async loader)

Sat 11 Nov 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Refactor site application actions
	* Update npm packages (file-loader, styr)
	* Fix logo file name path

Thu 09 Nov 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Enter pyramid_secure_response (ssl redirect, HSTS Header)

Mon 09 Oct 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Change urls for badge (as `img.scrolliris.io`)
	* Add a note for license

Tue 03 Oct 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add changelog link

Wed 16 Aug 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Initial import